language/move-lang/tests/move_check/parser/address_misspelled.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/address_misspelled.move:1:1
  │
1 │ addrexx 0x1:
  │ ^^^^^^^ Invalid code unit. Expected 'address', 'module', or 'script'. Got 'addrexx'

